<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_green"
    tools:context=".ui.detail.DetailActivity"
    android:scrollbars="none">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/iv_detail_animal"
        android:layout_width="414dp"
        android:layout_height="254dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/slideone" />

        <TextView
            android:id="@+id/tv_name_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="168dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="169dp"
            android:text="@string/Nama_hewan"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/eregular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_detail_animal" />

        <View
            android:id="@+id/spacer"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/green_spacer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_detail"
            app:layout_constraintVertical_bias="0.034" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="337dp" />

        <include
            android:id="@+id/include_classification"
            layout="@layout/layout_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline" />

    <View
        android:id="@+id/spacer_one"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/green_spacer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_classification"
        app:layout_constraintVertical_bias="0.025" />

        <TextView
            android:id="@+id/Desc_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/Description"
            android:textColor="@color/green"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spacer_one" />

    <TextView
        android:id="@+id/desc_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="?attr/colorControlHighlight"
        android:text="@string/Description_dummy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Desc_tittle"
        app:layout_constraintVertical_bias="0.034" />

    <View
        android:id="@+id/spacer_two"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/green_spacer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_display"
        app:layout_constraintVertical_bias="0.025" />

        <TextView
            android:id="@+id/habitat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="HABITAT"
            android:textColor="@color/green"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spacer_two" />

    <TextView
        android:id="@+id/habitat_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="?attr/colorControlHighlight"
        android:text="@string/Description_dummy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habitat_title" />

    <View
        android:id="@+id/spacer_three"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/green_spacer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habitat_display"
        app:layout_constraintVertical_bias="0.025" />

        <TextView
            android:id="@+id/repro_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="REPRODUCTION"
            android:textColor="@color/green"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spacer_three" />

    <TextView
        android:id="@+id/repro_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="?attr/colorControlHighlight"
        android:text="@string/Description_dummy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repro_title" />

    <View
        android:id="@+id/spacer_four"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/green_spacer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repro_display"
        app:layout_constraintVertical_bias="0.025" />

        <TextView
            android:id="@+id/diet_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:text="DIET"
            android:textColor="@color/green"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spacer_four" />

    <TextView
        android:id="@+id/diet_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:textColor="?attr/colorControlHighlight"
        android:text="@string/Description_dummy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diet_title" />

        <View
            android:id="@+id/spacer_five"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:background="@color/green_spacer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diet_display"
            app:layout_constraintVertical_bias="0.025" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    


</ScrollView>